--- a/GKOM/GKOM/GKOM.vcxproj
+++ b/GKOM/GKOM/GKOM.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="Cage.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Fog.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RoboticArm.cpp" />
@@ -88,6 +89,7 @@
   <ItemGroup>
     <ClInclude Include="Cage.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Fog.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="RoboticArm.h" />
   </ItemGroup>
