--- a/GKOM/GKOM/GKOM.vcxproj.filters
+++ b/GKOM/GKOM/GKOM.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Light.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Fog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cage.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Fog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
