--- a/GKOM/GKOM/GKOM.vcxproj
+++ b/GKOM/GKOM/GKOM.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="Fog.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="RoboticArm.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +92,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Fog.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="RoboticArm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
